--- a/scss/object/project/common/_p-menu.scss
+++ b/scss/object/project/common/_p-menu.scss
@@ -21,7 +21,7 @@
 }
 
 .p-menu-btn {
-    background-color: $green;
+    background-color: $d-green;
     width: calc( (100% - 0.25rem)/2);
     height: 50px;
     text-align: center;
