--- a/scss/object/project/front-page/_p-news.scss
+++ b/scss/object/project/front-page/_p-news.scss
@@ -49,7 +49,7 @@
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
-    background-color: $green;
+    background-color: $d-green;
     p {
         color: $white;
     }
