--- a/scss/object/project/front-page/_p-recipe.scss
+++ b/scss/object/project/front-page/_p-recipe.scss
@@ -24,7 +24,7 @@
 	transition: all 0.5s ease;
     cursor: pointer;
     &:hover {
-        background-color: $green;
+        background-color: $d-green;
     }
     p {
         color: $white;
@@ -48,7 +48,7 @@
     padding-right: 0.5rem;
     padding-bottom: 2rem;
     padding-left: 0.5rem;
-    border: 2px solid $green;
+    border: 2px solid $d-green;
 }
 
 .p-recipe-more {
@@ -62,7 +62,7 @@
         position: relative;
         color: $white;
         font-size: rem(20);
-        background-color: $green;
+        background-color: $d-green;
         border-radius: 5px;
         line-height: calc(3.75rem - rem(4));
         padding-right: rem(8);
