--- a/scss/object/project/news/_p-listNews.scss
+++ b/scss/object/project/news/_p-listNews.scss
@@ -20,7 +20,7 @@
     align-items: center;
     font-weight: bold;
     position: relative;
-    border: 1px solid $green;
+    border: 1px solid $d-green;
     border-radius: rem(4);
     padding: rem(16) rem(4);
     transition: 0.5s;
