--- a/scss/object/project/taxonomy/_p-content.scss
+++ b/scss/object/project/taxonomy/_p-content.scss
@@ -12,7 +12,7 @@
 .p-content-list {
     display: flex;
     flex-direction: column;
-    border: 2px solid $green;
+    border: 2px solid $d-green;
     border-radius: rem(5);
     padding: 2rem 0.5rem;
 }
