--- a/scss/object/component/_c-pagination.scss
+++ b/scss/object/component/_c-pagination.scss
@@ -16,14 +16,14 @@ a.page-numbers {
     width: 50px;
     height: 50px;
     padding: 1rem 1.15rem;
-    border: 1px solid $green;
+    border: 1px solid $d-green;
     margin-left: 0.625rem;
     margin-right: 0.625rem;
     transition: 0.5s;
     font-weight: bold;
-    color: $green;
+    color: $d-green;
     &:hover {
-        background-color: $green;
+        background-color: $d-green;
         color: $white;
     }
 }
@@ -33,7 +33,7 @@ span.page-numbers {
     width: 50px;
     height: 50px;
     padding: 1rem 1.25rem;
-    border: 1px solid $green;
+    border: 1px solid $d-green;
     margin-left: 0.625rem;
     margin-right: 0.625rem;
 }
@@ -46,7 +46,7 @@ span.page-numbers.dots {
 
 .current {
     padding: 1rem 1.25rem;
-    background: $green;
+    background: $d-green;
     color: $white;
     margin-left: 0.625rem;
     margin-right: 0.625rem;
