--- a/scss/object/project/news/_p-contNews.scss
+++ b/scss/object/project/news/_p-contNews.scss
@@ -27,7 +27,7 @@
             position: absolute;
             width: 100%;
             height: rem(1);
-            background-color: $green;
+            background-color: $d-green;
             left: 0;
             bottom: rem(-4);
         }
