--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ a.page-numbers {
   display: block;
   width: 50px;
   height: 50px;
-  padding: 1rem 1.15rem;
+  padding: 1rem 1.5rem;
   border: 1px solid #298800;
   margin-left: .625rem;
   margin-right: .625rem;
@@ -979,12 +979,12 @@ a.next.page-numbers {
 }
 
 .p-menu-btn a {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 50px;
   color: #fff;
-  font-size: min(2rem,7.2vw);
-  font-family: Fahkwang,"Fjalla One","Montserrat Subrayada","Concert One",cursive,sans-serif;
   text-transform: uppercase;
   padding: .8rem .2rem;
   box-shadow: 2px 2px 5px #2c3848;
@@ -997,20 +997,26 @@ a.next.page-numbers {
   text-shadow: 1px 1px 1px #2c3848;
 }
 
-.p-menu-btn a span {
+.p-menu-btn a span:first-child {
+  font-size: min(2rem,5.5vw);
+  font-family: Fahkwang,"Fjalla One","Montserrat Subrayada","Concert One",cursive,sans-serif;
+}
+
+.p-menu-btn a span:last-child {
   font-size: .75rem;
   margin-left: .25rem;
 }
 
 .p-menu-btn__drink a {
   display: flex;
+  align-items: center;
   justify-content: center;
-  align-items: flex-end;
   padding: .1rem .25rem;
 }
 
 .p-menu-btn__drink a span:first-child {
-  font-size: 1.4rem;
+  font-size: 1rem;
+  line-height: 1;
   text-indent: -1em;
   margin-left: 0;
 }
@@ -1324,13 +1330,42 @@ input[type=checkbox]:checked+span.mwform-checkbox-field-text::after {
   padding: 0;
   z-index: 0;
   border-radius: .25rem;
+  border: 1px solid #298800;
   color: #fff;
   margin: 0 auto;
   font-weight: 700;
+  position: relative;
+  z-index: 1;
 }
 
 .p-contact-btn:last-child {
   margin-bottom: 2rem;
+}
+
+.p-contact-btn::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #fff;
+  border-radius: .25rem;
+  transition: all .5s ease-in-out;
+}
+
+.p-contact-btn:hover::after {
+  left: 0;
+  width: 100%;
+}
+
+.p-contact-btn:active {
+  top: 2px;
+}
+
+.p-contact-btn:hover {
+  color: #298800;
 }
 
 .p-contact-btn__input {
@@ -1344,6 +1379,11 @@ input[type=checkbox]:checked+span.mwform-checkbox-field-text::after {
   position: relative;
   z-index: 1;
   cursor: pointer;
+  transition: .7s;
+}
+
+.p-contact-btn__input:hover {
+  color: #298800;
 }
 
 .p-contact-thanks {
@@ -1579,31 +1619,51 @@ input[type=checkbox]:checked+span.mwform-checkbox-field-text::after {
   color: #fff;
   font-size: 1.25rem;
   background-color: #298800;
+  border: .0625rem solid #298800;
   border-radius: 5px;
   line-height: 3.5rem;
   padding-right: .5rem;
-  box-shadow: 2px 2px 5px #2c3848;
-  border: 2px solid #00b906;
-  transition: 1s;
-}
-
-.p-recipe-btn a:hover {
-  background-color: #fff;
-  color: #00b906;
-  box-shadow: 3px 3px 10px #2c3848;
-}
-
-.p-recipe-btn a:hover::after {
-  content: "＞";
-  margin-left: .375rem;
+  position: relative;
+  z-index: 1;
 }
 
 .p-recipe-btn a::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #fff;
+  border-radius: .3125rem;
+  transition: all .5s ease-in-out;
+}
+
+.p-recipe-btn a:hover::after {
+  left: 0;
+  width: 100%;
+}
+
+.p-recipe-btn a:active {
+  top: 2px;
+}
+
+.p-recipe-btn a:hover {
+  color: #298800;
+}
+
+.p-recipe-btn a:hover::before {
+  content: "＞";
+  right: .5rem;
+}
+
+.p-recipe-btn a::before {
   content: "＞";
   position: absolute;
   font-size: 1.5rem;
   font-weight: 700;
-  margin-left: .125rem;
+  right: .75rem;
   transition: .5s;
 }
 
@@ -2419,7 +2479,16 @@ input[type=checkbox]:checked+span.mwform-checkbox-field-text::after {
   .p-menu-btn a {
     height: 60px;
     font-weight: 700;
-    padding: .9375rem .25rem;
+    padding: .9375rem 1rem;
+  }
+
+  .p-menu-btn a span:first-child {
+    font-size: min(2rem,5vw);
+  }
+
+  .p-menu-btn a span:last-child {
+    font-size: 1.125rem;
+    margin-left: .25rem;
   }
 
   .p-menu-btn__drink a {
@@ -2427,7 +2496,7 @@ input[type=checkbox]:checked+span.mwform-checkbox-field-text::after {
   }
 
   .p-menu-btn__drink a span:first-child {
-    line-height: 1;
+    font-size: 1.5rem;
   }
 
   .p-swiper-item {
@@ -2708,6 +2777,7 @@ input[type=checkbox]:checked+span.mwform-checkbox-field-text::after {
 
   .p-menu-btn {
     height: 70px;
+    text-align: start;
     width: calc((100% - .75rem)/ 4);
   }
 
@@ -2725,23 +2795,35 @@ input[type=checkbox]:checked+span.mwform-checkbox-field-text::after {
   }
 
   .p-menu-btn a {
+    display: flex;
+    align-items: center;
+    justify-content: start;
     height: 70px;
-    font-size: 2.25rem;
-    padding: 1rem .25rem;
+    padding: 1rem;
   }
 
-  .p-menu-btn a span {
-    font-size: .75rem;
+  .p-menu-btn a span:first-child {
+    font-size: min(2rem,2.4vw);
+  }
+
+  .p-menu-btn a span:last-child {
+    font-size: min(1.75rem,1.8vw);
     margin-left: .25rem;
   }
 
   .p-menu-btn__drink a {
-    padding: .5rem .25rem;
+    padding: .5rem .25rem .5rem min(3rem,4vw);
   }
 
   .p-menu-btn__drink a span:first-child {
     line-height: 1;
-    font-size: 1.75rem;
+    font-size: min(1.75rem,2vw);
+  }
+
+  .p-menu-btn__drink a span:last-child {
+    font-size: min(1.75rem,1.8vw);
+    text-indent: -1em;
+    margin-left: .75rem;
   }
 
   .p-swiper-item {
@@ -2774,7 +2856,7 @@ input[type=checkbox]:checked+span.mwform-checkbox-field-text::after {
   }
 
   .p-contact-btn:first-child {
-    margin: 0;
+    margin: 0 2rem;
   }
 
   .p-contact-btn:last-child {
