--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -273,7 +273,7 @@ a.page-numbers {
   display: block;
   width: 50px;
   height: 50px;
-  padding: 1rem 1.15rem;
+  padding: 1rem 1.25rem;
   border: 1px solid #298800;
   margin-left: 0.625rem;
   margin-right: 0.625rem;
@@ -1133,12 +1133,12 @@ a.next.page-numbers {
   margin-top: 0.25rem;
 }
 .p-menu-btn a {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 50px;
   color: #ffffff;
-  font-size: min(2rem, 7.2vw);
-  font-family: "Fahkwang", "Fjalla One", "Montserrat Subrayada", "Concert One", cursive, sans-serif;
   text-transform: uppercase;
   padding: 0.8rem 0.2rem;
   box-shadow: 2px 2px 5px #2C3848;
@@ -1149,19 +1149,24 @@ a.next.page-numbers {
   margin-bottom: 0.125rem;
   text-shadow: 1px 1px 1px #2C3848;
 }
-.p-menu-btn a span {
+.p-menu-btn a span:first-child {
+  font-size: min(2rem, 5.5vw);
+  font-family: "Fahkwang", "Fjalla One", "Montserrat Subrayada", "Concert One", cursive, sans-serif;
+}
+.p-menu-btn a span:last-child {
   font-size: 0.75rem;
   margin-left: 0.25rem;
 }
 
 .p-menu-btn__drink a {
   display: flex;
+  align-items: center;
   justify-content: center;
-  align-items: flex-end;
   padding: 0.1rem 0.25rem;
 }
 .p-menu-btn__drink a span:first-child {
-  font-size: 1.4rem;
+  font-size: 1rem;
+  line-height: 1;
   text-indent: -1em;
   margin-left: 0;
 }
@@ -1176,19 +1181,27 @@ a.next.page-numbers {
   .p-menu-btn a {
     height: 60px;
     font-weight: bold;
-    padding: 0.9375rem 0.25rem;
+    padding: 0.9375rem 1rem;
+  }
+  .p-menu-btn a span:first-child {
+    font-size: min(2rem, 5vw);
+  }
+  .p-menu-btn a span:last-child {
+    font-size: 1.125rem;
+    margin-left: 0.25rem;
   }
 
   .p-menu-btn__drink a {
     padding: 0.5rem 0.25rem;
   }
   .p-menu-btn__drink a span:first-child {
-    line-height: 1;
+    font-size: 1.5rem;
   }
 }
 @media screen and (min-width:860px) {
   .p-menu-btn {
     height: 70px;
+    text-align: start;
     width: calc((100% - 0.75rem) / 4);
   }
   .p-menu-btn:nth-child(2), .p-menu-btn:nth-child(6) {
@@ -1201,21 +1214,31 @@ a.next.page-numbers {
     margin-top: 0.25rem;
   }
   .p-menu-btn a {
+    display: flex;
+    align-items: center;
+    justify-content: start;
     height: 70px;
-    font-size: 2.25rem;
-    padding: 1rem 0.25rem;
+    padding: 1rem;
   }
-  .p-menu-btn a span {
-    font-size: 0.75rem;
+  .p-menu-btn a span:first-child {
+    font-size: min(2rem, 2.4vw);
+  }
+  .p-menu-btn a span:last-child {
+    font-size: min(1.75rem, 1.8vw);
     margin-left: 0.25rem;
   }
 
   .p-menu-btn__drink a {
-    padding: 0.5rem 0.25rem;
+    padding: 0.5rem 0.25rem 0.5rem min(3rem, 4vw);
   }
   .p-menu-btn__drink a span:first-child {
     line-height: 1;
-    font-size: 1.75rem;
+    font-size: min(1.75rem, 2vw);
+  }
+  .p-menu-btn__drink a span:last-child {
+    font-size: min(1.75rem, 1.8vw);
+    text-indent: -1em;
+    margin-left: 0.75rem;
   }
 }
 @media screen and (min-width:1280px) {
@@ -1587,12 +1610,37 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   padding: 0;
   z-index: 0;
   border-radius: 0.25rem;
+  border: 1px solid #298800;
   color: #ffffff;
   margin: 0 auto;
   font-weight: bold;
+  position: relative;
+  z-index: 1;
 }
 .p-contact-btn:last-child {
   margin-bottom: 2rem;
+}
+.p-contact-btn::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #ffffff;
+  border-radius: 0.25rem;
+  transition: all 0.5s ease-in-out;
+}
+.p-contact-btn:hover::after {
+  left: 0;
+  width: 100%;
+}
+.p-contact-btn:active {
+  top: 2px;
+}
+.p-contact-btn:hover {
+  color: #298800;
 }
 
 .p-contact-btn__input {
@@ -1606,6 +1654,10 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   position: relative;
   z-index: 1;
   cursor: pointer;
+  transition: 0.7s;
+}
+.p-contact-btn__input:hover {
+  color: #298800;
 }
 
 .p-contact-thanks {
@@ -1896,28 +1948,45 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   color: #ffffff;
   font-size: 1.25rem;
   background-color: #298800;
+  border: 0.0625rem solid #298800;
   border-radius: 5px;
   line-height: 3.5rem;
   padding-right: 0.5rem;
-  box-shadow: 2px 2px 5px #2C3848;
-  border: 2px solid #00B906;
-  transition: 1s;
-}
-.p-recipe-btn a:hover {
-  background-color: white;
-  color: #00B906;
-  box-shadow: 3px 3px 10px #2C3848;
-}
-.p-recipe-btn a:hover::after {
-  content: "＞";
-  margin-left: 0.375rem;
+  position: relative;
+  z-index: 1;
 }
 .p-recipe-btn a::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #ffffff;
+  border-radius: 0.3125rem;
+  transition: all 0.5s ease-in-out;
+}
+.p-recipe-btn a:hover::after {
+  left: 0;
+  width: 100%;
+}
+.p-recipe-btn a:active {
+  top: 2px;
+}
+.p-recipe-btn a:hover {
+  color: #298800;
+}
+.p-recipe-btn a:hover::before {
+  content: "＞";
+  right: 0.5rem;
+}
+.p-recipe-btn a::before {
   content: "＞";
   position: absolute;
   font-size: 1.5rem;
   font-weight: bold;
-  margin-left: 0.125rem;
+  right: 0.75rem;
   transition: 0.5s;
 }
 
