--- a/scss/object/project/common/_p-menu.scss
+++ b/scss/object/project/common/_p-menu.scss
@@ -35,12 +35,12 @@
         margin-top: 0.25rem;
     }
     a {
-        display: inline-block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
         height: 50px;
         color: $white;
-        font-size: min(2rem, 7.2vw);
-        font-family: $ff_eng;
         text-transform: uppercase;
         padding: 0.8rem 0.2rem;
         box-shadow: 2px 2px 5px $navy;
@@ -51,8 +51,14 @@
             text-shadow: 1px 1px 1px $navy;
         }
         span {
-            font-size: rem(12);
-            margin-left: 0.25rem;
+            &:first-child {
+                font-size: min(2rem, 5.5vw);
+                font-family: $ff_eng;
+            }
+            &:last-child {
+                font-size: rem(12);
+                margin-left: 0.25rem;
+            }
         }
     }
 }
@@ -60,12 +66,13 @@
 .p-menu-btn__drink {
     a {
         display: flex;
+        align-items: center;
         justify-content: center;
-        align-items: flex-end;
         padding: 0.1rem 0.25rem;
         span {
             &:first-child {
-                font-size: 1.4rem;
+                font-size: 1rem;
+                line-height: 1;
                 text-indent:-1em;
                 margin-left: 0;
             }
@@ -82,7 +89,16 @@
         a {
             height: 60px;
             font-weight: bold;
-            padding: rem(15) 0.25rem;
+            padding: rem(15) 1rem;
+            span {
+                &:first-child {
+                    font-size: min(2rem, 5vw);
+                }
+                &:last-child {
+                    font-size: rem(18);
+                    margin-left: 0.25rem;
+                }
+            }
         }
     }
     .p-menu-btn__drink {
@@ -90,7 +106,7 @@
             padding: 0.5rem 0.25rem;
             span {
                 &:first-child {
-                    line-height: 1;
+                    font-size: rem(24);
                 }
             }
         }
@@ -100,6 +116,7 @@
 @include mq () {
     .p-menu-btn {
         height: 70px;
+        text-align: start;
         width: calc( (100% - 0.75rem)/4);
         &:nth-child(2),
         &:nth-child(6){
@@ -112,22 +129,34 @@
             margin-top: 0.25rem;
         }
         a {
+            display: flex;
+            align-items: center;
+            justify-content: start;
             height: 70px;
-            font-size: rem(36);
-            padding: rem(16) 0.25rem;
+            padding: rem(16);
             span {
-                font-size: rem(12);
-                margin-left: 0.25rem;
+                &:first-child {
+                    font-size: min(2rem, 2.4vw);
+                }
+                &:last-child {
+                    font-size: min(rem(28), 1.8vw);
+                    margin-left: 0.25rem;
+                }
             }
         }
     }
     .p-menu-btn__drink {
         a {
-            padding: 0.5rem 0.25rem;
+            padding: 0.5rem 0.25rem 0.5rem min(3rem, 4vw);
             span {
                 &:first-child {
                     line-height: 1;
-                    font-size: rem(28);
+                    font-size: min(rem(28), 2vw);
+                }
+                &:last-child {
+                    font-size: min(rem(28), 1.8vw);
+                    text-indent: -1em;
+                    margin-left: 0.75rem;
                 }
             }
         }
