--- a/scss/object/component/_c-breadcrumb.scss
+++ b/scss/object/component/_c-breadcrumb.scss
@@ -9,8 +9,8 @@
 .c-breadcrumb-inner {
     max-width: 1450px;
     margin: 0 auto;
-    padding-top: 1.1875rem;
-    padding-bottom: 1.1875rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .c-breadcrumb-main {
@@ -44,6 +44,12 @@
 }
 
 @include mq (sp) {
+    .c-breadcrumb-inner {
+        max-width: 1450px;
+        margin: 0 auto;
+        padding-top: 1.1875rem;
+        padding-bottom: 1.1875rem;
+    }
     .breadcrumbs {
         .home,
         .taxonomy,
@@ -55,4 +61,10 @@
             font-size: 1rem;
         }
     }
+}
+
+@include mq () {
+}
+
+@include mq (pc) {
 }
