--- a/scss/object/utility/_js.scss
+++ b/scss/object/utility/_js.scss
@@ -154,6 +154,15 @@
     &:nth-of-type(12){
         animation-delay: 1.1s;
     }
+    &:nth-of-type(13){
+        animation-delay: 1.2s;
+    }
+    &:nth-of-type(14){
+        animation-delay: 1.3s;
+    }
+    &:nth-of-type(15){
+        animation-delay: 1.4s;
+    }
 }
 
 //fadeup アニメ///////////////////
