--- a/scss/global/setting/_font-family.scss
+++ b/scss/global/setting/_font-family.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Fahkwang:wght@600&family=Fjalla+One&family=Montserrat+Subrayada&family=Zen+Maru+Gothic:wght@400;700&display=swap');
-
+// @import url(https://fonts.googleapis.com/css2?family=Concert+One&family=Fahkwang:wght@600&family=Fjalla+One&family=Montserrat+Subrayada&family=Zen+Maru+Gothic:wght@400;700&display=swap);
 
 $ff_jp: 'Zen Maru Gothic', "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", "メイリオ", "Hiragino Kaku Gothic ProN", "Hiragino Sans", sans-serif, 'Noto Sans JP', sans-serif;
 
