--- a/scss/object/project/front-page/_p-recipe.scss
+++ b/scss/object/project/front-page/_p-recipe.scss
@@ -24,7 +24,7 @@
 	transition: all 0.5s ease;
     cursor: pointer;
     &:hover {
-        background-color: $d-green;
+        background-color: $green;
     }
     p {
         color: $white;
