--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -408,10 +408,34 @@ a.next.page-numbers {
   border-radius: 0.25rem;
   -webkit-transition: 1s;
   transition: 1s;
+  position: relative;
+  z-index: 1;
+}
+
+.c-prevNext_item a::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: #298800;
+  border-radius: 0.125rem;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.c-prevNext_item a:hover::after {
+  left: 0;
+  width: 100%;
+}
+
+.c-prevNext_item a:active {
+  top: 2px;
 }
 
 .c-prevNext_item a:hover {
-  background-color: #298800;
   color: #ffffff;
 }
 
@@ -427,8 +451,6 @@ a.next.page-numbers {
 }
 
 .c-recipe-cont__item:hover {
-  -webkit-box-shadow: 0px 0px 5px #298800;
-  box-shadow: 0px 0px 5px #298800;
   opacity: 0.8;
 }
 
@@ -646,7 +668,7 @@ a.next.page-numbers {
   display: inline-block;
   background-color: #298800;
   position: relative;
-  padding-top: calc(1.2rem - 2px);
+  padding-top: calc(1.75rem - 2px);
   padding-right: calc(1.05rem - 2px);
   padding-bottom: calc(1rem - 2px);
   padding-left: calc(3.625rem - 2px);
@@ -655,10 +677,10 @@ a.next.page-numbers {
   font-weight: bold;
   border-radius: 25px;
   width: 100%;
-  height: 55px;
+  height: 4.375rem;
   border: 2px solid #298800;
-  -webkit-transition: 1s;
-  transition: 1s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   position: relative;
   z-index: 1;
 }
@@ -675,17 +697,14 @@ a.next.page-numbers {
   position: absolute;
   color: #fbff06;
   font-size: 0.75rem;
-  top: 3px;
-  left: 20px;
+  top: 0.625rem;
+  left: 1.25rem;
   -webkit-transition: 0.7s;
   transition: 0.7s;
 }
 
 .p-cta-btn a:hover {
-  background-color: rgba(255, 255, 255, 0.5);
   color: #298800;
-  -webkit-box-shadow: 3px 3px 10px #2C3848;
-  box-shadow: 3px 3px 10px #2C3848;
 }
 
 .p-cta-btn a:hover::before {
@@ -782,10 +801,6 @@ a.next.page-numbers {
   transition: -webkit-transform 1s;
   transition: transform 1s;
   transition: transform 1s, -webkit-transform 1s;
-}
-
-.p-footer-nav__item:not(:last-child) {
-  border-bottom: 2px solid white;
 }
 
 .p-footer-bottom {
@@ -1077,6 +1092,9 @@ a.next.page-numbers {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: end;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
@@ -1115,10 +1133,13 @@ a.next.page-numbers {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  padding: 0.1rem 0.25rem;
+  padding: 0.5rem 0.25rem;
 }
 
 .p-menu-btn__drink a span:first-child {
@@ -1657,15 +1678,6 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   padding-left: 1rem;
 }
 
-.p-news-item {
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-.p-news-item:hover {
-  text-shadow: 2px 2px 10px #c8c8c8, -2px 2px 10px #c8c8c8, 2px -2px 10px #c8c8c8, -2px -2px 10px #c8c8c8;
-}
-
 .p-news-item__inner {
   width: 100%;
   display: -webkit-box;
@@ -1751,7 +1763,7 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
 }
 
 .p-recipe-tab:hover {
-  background-color: #298800;
+  background-color: #00B906;
 }
 
 .p-recipe-tab p {
@@ -2750,12 +2762,18 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   }
 
   .p-cta-btn a {
-    padding-top: calc(1.4rem - 2px);
+    height: 80px;
+    padding-top: calc(1.75rem - 2px);
     padding-right: calc(2.5rem - 2px);
     padding-bottom: calc(1.2rem - 2px);
     padding-left: calc(4.125rem - 2px);
     font-size: 1.5rem;
-    height: 60px;
+  }
+
+  .p-cta-btn a span {
+    font-size: 0.75rem;
+    top: 0.875rem;
+    left: 1.25rem;
   }
 
   .p-footer-bottom__item {
@@ -2777,16 +2795,15 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
 
   .p-menu-btn a {
     height: 60px;
-    font-weight: bold;
     padding: 0.9375rem 1rem;
   }
 
   .p-menu-btn a span:first-child {
-    font-size: min(2rem, 5vw);
+    font-size: min(2rem, 5.7vw);
   }
 
   .p-menu-btn a span:last-child {
-    font-size: 1.125rem;
+    font-size: 1rem;
     margin-left: 0.25rem;
   }
 
@@ -3033,12 +3050,12 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   }
 
   .p-cta-btn a {
-    padding-top: calc(1.4rem - 2px);
+    padding-top: calc(1.625rem - 2px);
     padding-right: calc(2.5rem - 2px);
     padding-bottom: calc(1rem - 2px);
     padding-left: calc(3.75rem - 2px);
     font-size: 2rem;
-    height: 70px;
+    height: 85px;
   }
 
   .p-footer-nav__list {
@@ -3060,11 +3077,6 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   .p-footer-nav__item a {
     color: #ffffff;
     font-weight: bold;
-  }
-
-  .p-footer-nav__item:not(:last-child) {
-    border: none;
-    border-right: 2px solid #ffffff;
   }
 
   .p-header-logo {
@@ -3131,7 +3143,7 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   }
 
   .p-menu-btn {
-    height: 70px;
+    height: 75px;
     text-align: start;
     width: calc((100% - 0.75rem) / 4);
   }
@@ -3153,23 +3165,22 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: start;
     height: 70px;
     padding: 1rem;
+    padding-bottom: 1.2rem;
   }
 
   .p-menu-btn a span:first-child {
-    font-size: min(2rem, 2.4vw);
+    font-size: min(2.5rem, 3vw);
   }
 
   .p-menu-btn a span:last-child {
-    font-size: min(1.75rem, 1.8vw);
+    font-size: calc(min(2.5rem, 3vw) * 0.5);
     margin-left: 0.25rem;
+    margin-bottom: 0.2rem;
   }
 
   .p-menu-btn__drink a {
@@ -3177,14 +3188,15 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   }
 
   .p-menu-btn__drink a span:first-child {
-    line-height: 1;
-    font-size: min(1.75rem, 2vw);
+    line-height: 0.8;
+    font-size: min(2rem, 2.8vw);
   }
 
   .p-menu-btn__drink a span:last-child {
     font-size: min(1.75rem, 1.8vw);
+    font-size: calc(min(2rem, 2.8vw) * 0.5);
     text-indent: -1em;
-    margin-left: 0.75rem;
+    margin-left: 1rem;
   }
 
   .p-swiper-item {
@@ -3394,12 +3406,12 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   }
 
   .p-cta-btn a {
-    padding-top: calc(2rem - 2px);
+    padding-top: calc(2.5rem - 2px);
     padding-right: calc(3.375rem - 2px);
     padding-bottom: calc(1rem - 2px);
     padding-left: calc(5.125rem - 2px);
     font-size: 3rem;
-    height: 100px;
+    height: 120px;
   }
 
   .p-cta-btn a span {
@@ -3430,12 +3442,36 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
 
   .p-menu-btn a {
     height: 80px;
-    font-size: 3rem;
   }
 
   .p-menu-btn a span {
     font-size: 1rem;
     margin-left: 0.25rem;
+  }
+
+  .p-menu-btn a span:first-child {
+    font-size: min(2.625rem, 3vw);
+  }
+
+  .p-menu-btn a span:last-child {
+    font-size: min(1.5rem, 1.6vw);
+    margin-left: 0.25rem;
+    margin-bottom: 0.2rem;
+  }
+
+  .p-menu-btn__drink a {
+    padding-left: 3.5rem;
+  }
+
+  .p-menu-btn__drink a span:first-child {
+    line-height: 0.8;
+    font-size: 2.25rem;
+  }
+
+  .p-menu-btn__drink a span:last-child {
+    font-size: 1.375rem;
+    text-indent: -1em;
+    margin-left: 1.5rem;
   }
 
   .p-swiper-item {
