--- a/scss/object/project/common/_p-menu.scss
+++ b/scss/object/project/common/_p-menu.scss
@@ -37,6 +37,7 @@
     a {
         display: flex;
         align-items: center;
+        align-items: end;
         justify-content: center;
         width: 100%;
         height: 50px;
@@ -67,8 +68,9 @@
     a {
         display: flex;
         align-items: center;
+        align-items: flex-end;
         justify-content: center;
-        padding: 0.1rem 0.25rem;
+        padding: 0.5rem 0.25rem;
         span {
             &:first-child {
                 font-size: 1rem;
@@ -88,14 +90,13 @@
         height: 60px;
         a {
             height: 60px;
-            font-weight: bold;
             padding: rem(15) 1rem;
             span {
                 &:first-child {
-                    font-size: min(2rem, 5vw);
+                    font-size: min(2rem, 5.7vw);
                 }
                 &:last-child {
-                    font-size: rem(18);
+                    font-size: rem(16);
                     margin-left: 0.25rem;
                 }
             }
@@ -115,7 +116,7 @@
 
 @include mq () {
     .p-menu-btn {
-        height: 70px;
+        height: 75px;
         text-align: start;
         width: calc( (100% - 0.75rem)/4);
         &:nth-child(2),
@@ -130,17 +131,18 @@
         }
         a {
             display: flex;
-            align-items: center;
             justify-content: start;
             height: 70px;
             padding: rem(16);
+            padding-bottom: 1.2rem;
             span {
                 &:first-child {
-                    font-size: min(2rem, 2.4vw);
+                    font-size: min(rem(40), 3vw);
                 }
                 &:last-child {
-                    font-size: min(rem(28), 1.8vw);
+                    font-size: calc((min(rem(40), 3vw))*0.5);
                     margin-left: 0.25rem;
+                    margin-bottom: 0.2rem;
                 }
             }
         }
@@ -150,13 +152,14 @@
             padding: 0.5rem 0.25rem 0.5rem min(3rem, 4vw);
             span {
                 &:first-child {
-                    line-height: 1;
-                    font-size: min(rem(28), 2vw);
+                    line-height: 0.8;
+                    font-size: min(rem(32), 2.8vw);
                 }
                 &:last-child {
                     font-size: min(rem(28), 1.8vw);
+                    font-size: calc((min(rem(32), 2.8vw))*0.5);
                     text-indent: -1em;
-                    margin-left: 0.75rem;
+                    margin-left: 1rem;
                 }
             }
         }
@@ -181,10 +184,36 @@
         }
         a {
             height: 80px;
-            font-size: rem(48);
             span {
                 font-size: rem(16);
                 margin-left: 0.25rem;
+            }
+            span {
+                &:first-child {
+                    font-size: min(rem(42), 3vw);
+                }
+                &:last-child {
+                    font-size: min(rem(24), 1.6vw);
+                    margin-left: 0.25rem;
+                    margin-bottom: 0.2rem;
+                }
+            }
+        }
+    }
+
+    .p-menu-btn__drink {
+        a {
+            padding-left: rem(56);
+            span {
+                &:first-child {
+                    line-height: 0.8;
+                    font-size: rem(36);
+                }
+                &:last-child {
+                    font-size: rem(22);
+                    text-indent: -1em;
+                    margin-left: 1.5rem;
+                }
             }
         }
     }
