--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -327,6 +327,7 @@ a.page-numbers {
   height: 50px;
   padding: 1rem 1.25rem;
   border: 1px solid #298800;
+  border-radius: 5px;
   margin-left: 0.625rem;
   margin-right: 0.625rem;
   -webkit-transition: 0.5s;
@@ -346,6 +347,7 @@ span.page-numbers {
   height: 50px;
   padding: 1rem 1.25rem;
   border: 1px solid #298800;
+  border-radius: 5px;
   margin-left: 0.625rem;
   margin-right: 0.625rem;
 }
@@ -623,6 +625,43 @@ a.next.page-numbers {
   text-shadow: 2px 2px 10px #c8c8c8, -2px 2px 10px #c8c8c8, 2px -2px 10px #c8c8c8, -2px -2px 10px #c8c8c8;
 }
 
+.p-banner {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+}
+
+.p-banner-inner {
+  background-color: #00B906;
+  padding: 1rem;
+  width: 100%;
+  height: 3.125rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #ffffff;
+  font-weight: bold;
+  letter-spacing: 0.25rem;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.p-banner-inner img {
+  width: 1.375rem;
+  margin-top: 0.25rem;
+  margin-left: 0.25rem;
+}
+
+.p-banner-inner:hover {
+  opacity: 0.7;
+}
+
 .p-cta {
   background-size: cover;
   background-attachment: fixed;
@@ -675,7 +714,7 @@ a.next.page-numbers {
   color: #ffffff;
   font-size: 1.25rem;
   font-weight: bold;
-  border-radius: 25px;
+  border-radius: 0.5rem;
   width: 100%;
   height: 4.375rem;
   border: 2px solid #298800;
@@ -691,6 +730,9 @@ a.next.page-numbers {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   right: 16%;
+  font-size: 0.875rem;
+  -webkit-transform: translateY(30%);
+  transform: translateY(30%);
 }
 
 .p-cta-btn a span {
@@ -725,7 +767,7 @@ a.next.page-numbers {
   left: 0;
   z-index: -1;
   background: #ffffff;
-  border-radius: 1.5625rem;
+  border-radius: 0.3125rem;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
@@ -806,6 +848,7 @@ a.next.page-numbers {
 .p-footer-bottom {
   background-color: #ffffff;
   padding-top: 2rem;
+  padding-bottom: 5.125rem;
 }
 
 .p-footer-sns__list {
@@ -855,7 +898,7 @@ a.next.page-numbers {
   font-size: max(0.75rem, 3.8vw);
 }
 
-.l-footer-copy {
+.p-footer-copy {
   text-align: center;
 }
 
@@ -1719,7 +1762,7 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
 
 .p-products-item {
   margin: 0 auto;
-  max-width: 500px;
+  max-width: 400px;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -1755,7 +1798,7 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   background-color: #298800;
   height: 4rem;
   width: calc((100% - 16px) / 5);
-  border-radius: 0 10px 0 0;
+  border-radius: 0.625rem 0.625rem 0 0;
   padding-right: 0.25rem;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
@@ -1848,11 +1891,12 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
 .p-recipe-btn a::before {
   content: "＞";
   position: absolute;
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   font-weight: bold;
   right: 0.75rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  top: 0;
 }
 
 .p-contNews-inner {
@@ -2767,7 +2811,14 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
     padding-right: calc(2.5rem - 2px);
     padding-bottom: calc(1.2rem - 2px);
     padding-left: calc(4.125rem - 2px);
-    font-size: 1.5rem;
+    font-size: 1.75rem;
+  }
+
+  .p-cta-btn a::before {
+    content: "＞";
+    font-size: 1.25rem;
+    -webkit-transform: translateY(25%);
+    transform: translateY(25%);
   }
 
   .p-cta-btn a span {
@@ -3040,6 +3091,40 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
     margin-bottom: 2rem;
   }
 
+  .p-banner {
+    position: fixed;
+    bottom: auto;
+    top: calc(50vh - 7.8125rem);
+    width: 3.125rem;
+    right: 0;
+  }
+
+  .p-banner-inner {
+    background-color: #00B906;
+    padding: 1rem;
+    width: 100%;
+    height: 15.625rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    color: #ffffff;
+    -webkit-writing-mode: vertical-rl;
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+  }
+
+  .p-banner-inner img {
+    width: 1.375rem;
+    margin-top: 0.25rem;
+    margin-left: 0.25rem;
+  }
+
   .p-cta {
     padding-top: 5rem;
     padding-bottom: 5rem;
@@ -3053,9 +3138,16 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
     padding-top: calc(1.625rem - 2px);
     padding-right: calc(2.5rem - 2px);
     padding-bottom: calc(1rem - 2px);
-    padding-left: calc(3.75rem - 2px);
+    padding-left: calc(4.125rem - 2px);
     font-size: 2rem;
     height: 85px;
+  }
+
+  .p-cta-btn a::before {
+    content: "＞";
+    font-size: 1.375rem;
+    -webkit-transform: translateY(30%);
+    transform: translateY(30%);
   }
 
   .p-footer-nav__list {
@@ -3265,6 +3357,25 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
     line-height: 1.2;
   }
 
+  .p-products-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  .p-products-item {
+    margin: 0;
+    max-width: 400px;
+  }
+
+  .p-products-item:not(:last-child) {
+    margin-bottom: 0;
+    margin-right: 2rem;
+  }
+
   .p-recipe-tab {
     height: 5rem;
   }
@@ -3418,6 +3529,11 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
     font-size: 1.5rem;
   }
 
+  .p-cta-btn a::before {
+    content: "＞";
+    font-size: 2rem;
+  }
+
   .p-menu-btn {
     height: 80px;
     width: calc((100% - 1.5rem) / 4);
@@ -3500,6 +3616,23 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
 
   .p-contact-thanks {
     font-size: 2rem;
+  }
+
+  .p-products-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  .p-products-item {
+    max-width: 450px;
+  }
+
+  .p-products-item:not(:last-child) {
+    margin-right: 4rem;
   }
 
   .p-contNews__ttl {
