--- a/scss/object/component/_c-pagination.scss
+++ b/scss/object/component/_c-pagination.scss
@@ -17,6 +17,7 @@ a.page-numbers {
     height: 50px;
     padding: 1rem 1.25rem;
     border: 1px solid $d-green;
+    border-radius: 5px;
     margin-left: 0.625rem;
     margin-right: 0.625rem;
     transition: 0.5s;
@@ -34,6 +35,7 @@ span.page-numbers {
     height: 50px;
     padding: 1rem 1.25rem;
     border: 1px solid $d-green;
+    border-radius: 5px;
     margin-left: 0.625rem;
     margin-right: 0.625rem;
 }
