--- a/scss/object/project/common/_p-cta.scss
+++ b/scss/object/project/common/_p-cta.scss
@@ -46,7 +46,7 @@
         color: $white;
         font-size: rem(20);
         font-weight: bold;
-        border-radius: 25px;
+        border-radius: rem(8);
         width: 100%;
         height: rem(70);
         border: 2px solid $d-green;
@@ -56,6 +56,8 @@
             position: absolute;
             transition: 0.5s;
             right: 16%;
+            font-size: rem(14);
+            transform: translateY(30%);
         }
         span {
             position: absolute;
@@ -75,7 +77,7 @@
                 color: $black;
             }
         }
-        @include btn-anime ($white, rem(25));
+        @include btn-anime ($white, rem(5));
     }
 }
 
@@ -101,7 +103,12 @@
             padding-right: calc(2.5rem - 2px);
             padding-bottom: calc(1.2rem - 2px);
             padding-left: calc(rem(66) - 2px);
-            font-size: rem(24);
+            font-size: rem(28);
+            &::before{
+                content: "＞";
+                font-size: rem(20);
+                transform: translateY(25%);
+            }
             span {
                 font-size: rem(12);
                 top: rem(14);
@@ -122,9 +129,14 @@
             padding-top: calc(rem(26) - 2px);        //borderの幅分
             padding-right: calc(2.5rem - 2px);
             padding-bottom: calc(1rem - 2px);
-            padding-left: calc(rem(60) - 2px);
+            padding-left: calc(rem(66) - 2px);
             font-size: rem(32);
             height: 85px;
+            &::before{
+                content: "＞";
+                font-size: rem(22);
+                transform: translateY(30%);
+            }
         }
     }
 }
@@ -158,6 +170,10 @@
             height: 120px;
             span {
                 font-size: rem(24);
+            }
+            &::before{
+                content: "＞";
+                font-size: rem(32);
             }
         }
     }
