--- a/scss/object/project/common/_p-footer.scss
+++ b/scss/object/project/common/_p-footer.scss
@@ -114,4 +114,10 @@
             font-weight: bold;
         }
     }
+
+    .p-footer-bottom {
+        background-color: $white;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
 }
