--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -903,8 +903,10 @@ a.next.page-numbers {
 }
 
 .p-header-logo {
-  width: 80px;
-  height: 52px;
+  width: 120px;
+  height: 70px;
+  overflow: hidden;
+  margin-bottom: 0.75rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -917,6 +919,7 @@ a.next.page-numbers {
   display: inline-block;
   width: 100%;
   height: 100%;
+  margin-top: 0.875rem;
 }
 
 .p-header-nav {
@@ -955,8 +958,6 @@ a.next.page-numbers {
 
 .p-header-nav__item:not(:last-child) a {
   display: inline-block;
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
   -webkit-transition: color 1s;
   transition: color 1s;
   position: relative;
@@ -1261,6 +1262,45 @@ a.next.page-numbers {
   color: #ffffff;
   text-shadow: 0.5px 0.5px 0px #000000;
   margin-top: 0.25rem;
+  margin-left: 1rem;
+}
+
+.p-company-cont {
+  max-width: 56.25rem;
+  background-color: #eaf4dc;
+  border-radius: 0.625rem;
+  padding: 2rem 0.5rem;
+  margin: 0 auto;
+  line-height: 1.5;
+}
+
+.p-company-cont_inner {
+  max-width: 43.75rem;
+  margin: 0 auto;
+}
+
+.p-company-name {
+  margin-bottom: 2rem;
+  margin-left: 0.5rem;
+}
+
+.p-company-name__main {
+  font-size: 1.125rem;
+}
+
+.p-company-name__sub {
+  font-size: 0.8rem;
+}
+
+.p-company-list {
+  margin-bottom: 2rem;
+}
+
+.p-company-item:not(:last-child) {
+  margin-bottom: 1.75rem;
+}
+
+.p-company-item_desc {
   margin-left: 1rem;
 }
 
@@ -3169,6 +3209,12 @@ input[type=checkbox]:checked + span.mwform-checkbox-field-text::after {
   .p-footer-nav__item a {
     color: #ffffff;
     font-weight: bold;
+  }
+
+  .p-footer-bottom {
+    background-color: #ffffff;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 
   .p-header-logo {
