--- a/scss/object/project/common/_p-header.scss
+++ b/scss/object/project/common/_p-header.scss
@@ -1,8 +1,10 @@
 @use "global" as *;
 
 .p-header-logo {
-    width: 80px;
-    height: 52px;
+    width: 120px;
+    height: 70px;
+    overflow: hidden;
+    margin-bottom: rem(12);
     @include opa (0.8);
 }
 
@@ -10,6 +12,7 @@
     display: inline-block;
     width: 100%;
     height: 100%;
+    margin-top: rem(14);
     img {}
 }
 
@@ -43,8 +46,7 @@
         border-bottom: 2px dotted $black;
         a {
             display: inline-block;
-            padding-right: 0.5rem;
-            padding-left: 0.5rem;
+            
             transition: color 1s;
             @include txt-border($d-green);
             &::after {
