--- a/scss/object/project/single-recipe/_p-detail.scss
+++ b/scss/object/project/single-recipe/_p-detail.scss
@@ -84,6 +84,22 @@
     }
 }
 
+// youtube埋め込み
+.p-detail-youtube {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+    margin-bottom: rem(48);
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
 
 // レビュープラグイン調整用////////////////////////////
 
